--- a/ES6_project/package.json
+++ b/ES6_project/package.json
@@ -12,6 +12,7 @@
     "jquery.fancytree": "^2.37.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "redux": "^4.0.5",
     "ui-contextmenu": "^1.18.1"
   },
