--- a/ES6_project/.eslintrc
+++ b/ES6_project/.eslintrc
@@ -1,5 +1,6 @@
 /* http://eslint.org/docs/rules/ */
 {
+  "extends": "eslint:recommended",
   "parser": "babel-eslint",
   "ecmaFeatures": {
     "jsx": true
@@ -11,62 +12,44 @@
     "node": true
   },
   "rules": {
-    "camelcase": 2,
-    "consistent-return": 2,
-    "curly": [2, "all"],
-    "dot-notation": 0,
-    "eol-last": 2,
-    "eqeqeq": 2,
-    "max-len": [2, 128, 4],
-    "new-cap": [2, {"capIsNew": false}],
-    "no-eq-null": 2,
-    "no-mixed-spaces-and-tabs": 2,
-    "no-multiple-empty-lines": [2, {"max": 2}],
-    "no-trailing-spaces": 2,
-    "no-use-before-define": [2, "nofunc"],
-    "no-undef": 2,
-    "no-underscore-dangle": 0,
-    "no-unused-vars": 2,
-    "no-var": 2,
-    "object-curly-spacing": [2, "always"],
-    "quotes": [2, "single"],
+    "quotes": [
+      "error",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
+    "semi": 0,
+    "default-case": [
+      "error",
+      {
+        "commentPattern": "^no default$"
+      }
+    ],
+    "react/jsx-uses-vars": 0,
+    "react/react-in-jsx-scope": 0,
+    "no-new-wrappers": 0,
+    "no-mixed-operators": 0,
+    "require-atomic-updates": "off",
+    "comma-dangle": "off",
+    "no-unused-vars": "off",
+    "no-useless-constructor": 0,
+    "react/no-unescaped-entities": 0,
     "react/display-name": 0,
-    "react/jsx-boolean-value": 2,
-    "react/jsx-quotes": 2,
-    "react/jsx-no-undef": 2,
-    "react/jsx-sort-props": 0,
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/no-did-mount-set-state": 2,
-    "react/no-did-update-set-state": 2,
-    "react/no-multi-comp": 0,
-    "react/no-unknown-property": 2,
-    "react/prop-types": 2,
-    "react/react-in-jsx-scope": 2,
-    "react/self-closing-comp": 2,
-    "react/wrap-multilines": 2,
-    "semi": [2, "always"],
-    "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [2, "always"],
-    "space-in-brackets": [2, "always", {
-      "singleValue": false,
-      "objectsInArrays": false,
-      "arraysInArrays": false,
-      "arraysInObjects": true,
-      "objectsInObjects": true,
-      "propertyName": false
-    }],
-    "space-return-throw-case": 2,
-    "strict": 0,
-    "vars-on-top": 2,
-    "no-warning-comments": [1, {
-      "terms": ["todo", "fixme"], "location": "anywhere"
-    }],
+    "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-useless-escape": 0,
+    "no-console": 0,
+    "no-debugger": 0,
+    "no-empty": 0,
+    "linebreak-style": 0,
+    "import/first": 0,
+    "import/imports-first": 0,
+    "no-shadow": 0,
+    "disable-next-line": 0,
+    "no-case-declarations": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   },
-  "plugins": [
-    "react",
-    "react-hooks"
-  ]
+  "plugins": ["react-hooks"]
 }
