--- a/ES6_project/package.json
+++ b/ES6_project/package.json
@@ -40,6 +40,7 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
