Atributico pro autonome structure

--- a/ES6_project/package.json
+++ b/ES6_project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "attributico",
+  "name": "attributicopro",
   "version": "4.0.0",
   "private": true,
   "description": "Attribut&co for Opencart",
