--- a/ES6_project/package.json
+++ b/ES6_project/package.json
@@ -48,9 +48,11 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.2.8",
     "postcss-loader": "^3.0.0",
     "redux-devtools": "^3.7.0",
     "redux-devtools-instrument": "^1.10.0",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^2.3.8",
