fix errors after update plugins

--- a/ES6_project/package.json
+++ b/ES6_project/package.json
@@ -6,28 +6,29 @@
   "homepage": "http://attributico/dist",
   "main": "src/attributipro.js",
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
-    "jquery": "^3.5.1",
+    "@babel/runtime": "^7.14.6",
+    "caniuse-lite": "^1.0.30001245",
+    "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
-    "jquery.fancytree": "^2.37.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^6.13.1",
-    "react-modal": "^3.12.1",
-    "redux": "^4.0.5",
+    "jquery.fancytree": "^2.38.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.8",
+    "react-modal": "^3.14.3",
+    "redux": "^4.1.0",
     "ui-contextmenu": "^1.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@types/jquery": "^3.5.4",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@types/jquery": "^3.5.6",
     "@types/jquery.fancytree": "0.0.6",
-    "@types/jqueryui": "^1.12.13",
-    "@types/react": "^16.9.56",
+    "@types/jqueryui": "^1.12.16",
+    "@types/react": "^16.14.11",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -38,32 +39,32 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.6.0",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^4.1.11",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.12.2",
+    "less": "^3.13.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.14.1",
-    "postcss": "^8.2.8",
+    "postcss": "^8.3.5",
     "postcss-loader": "^3.0.0",
     "redux-devtools": "^3.7.0",
     "redux-devtools-instrument": "^1.10.0",
-    "resolve-url-loader": "^3.1.2",
+    "resolve-url-loader": "^3.1.4",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^2.3.8",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.0.5",
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.3.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.44.2",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
