--- a/ES6_project/.babelrc
+++ b/ES6_project/.babelrc
@@ -11,7 +11,8 @@
                         /* "polyfill": false, */
                         "regenerator": true       
                     }
-                ]
+                ],
+                ["@babel/plugin-proposal-private-methods", { "loose": true }]
             ]
         },
         "production": {
@@ -31,7 +32,8 @@
                         /* "polyfill": false, */
                         "regenerator": true       
                     }
-                ]
+                ],
+                ["@babel/plugin-proposal-private-methods", { "loose": true }]
             ]
         }
     }
