--- a/ES6_project/package.json
+++ b/ES6_project/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
     "react-modal": "^3.14.3",
+    "react-select": "^4.3.1",
     "redux": "^4.1.0",
     "ui-contextmenu": "^1.18.1"
   },
